styles/components/_input.scss
input, text, select {
  margin-bottom: 20px;
  background: #2E274C;
  border: 1px solid rgba(68, 68, 68, 0.2);
  box-sizing: border-box;
  border-radius: 3px;
  padding: 8px 14px;
  color: rgba(255, 255, 255, 0.5);;
  font-size: 14px;
  line-height: 165%;
  height: 40px;
}

